--- a/components/DetailsModal.tsx/styles/DetailsFooter.module.scss
+++ b/components/DetailsModal.tsx/styles/DetailsFooter.module.scss
@@ -29,6 +29,11 @@
     margin-right: 0;
   }
   
+
+  .modal-btn:active {
+    padding-inline: 2.5rem;
+    cursor: pointer;
+  }
   
 
   @media (hover: hover) and (pointer: fine) {
