--- a/components/MoviesScroller/styles/MovieCard.module.scss
+++ b/components/MoviesScroller/styles/MovieCard.module.scss
@@ -41,6 +41,10 @@ $img-height: 220px;
 
 }
 
+.movie-img:active {
+    transform: scale(1.02);
+}
+
 
 
 .movie-rating__container {
@@ -89,6 +93,10 @@ $img-height: 220px;
     transition: font-size 0.25s ease-in;
 }
 
+.movie-title:active {
+    text-decoration: underline;
+}
+
 
 
 @media (hover: hover) and (pointer: fine) { 
@@ -98,7 +106,7 @@ $img-height: 220px;
     }
 
     .movie-title:hover {
-        cursor: grab;
+        cursor: pointer;
         text-decoration: underline;
     }
 }
