--- a/components/UI/styles/SearchInput.module.scss
+++ b/components/UI/styles/SearchInput.module.scss
@@ -41,6 +41,11 @@
   transition: 0.25s ease-in-out;
 }
 
+.main-search__button:active {
+  cursor: pointer;
+  width: 18%;
+}
+
 
 
 @media (hover: hover) and (pointer: fine) {
